
2003-06-24	Joel Becker <joel.becker@oracle.com>

	* kernel/osm.c: Fix complete_ios_thunk like I fixed _native.

2003-06-24	Joel Becker <joel.becker@oracle.com>

	* Config.make.in: Add MCMODEL
	* kernel/Makefile: Add MCMODEL
	* configure.in: Add MCMODEL

2003-06-24	Joel Becker <joel.becker@oracle.com>

	* kernel/osm.c: Some LOG() bits, it works now, and some
		whitespace cleanup.
	* test/Makefile: Remove libosm.so dep, silly Makebo.

2003-06-23	Joel Becker <joel.becker@oracle.com>

	* kernel/osm.c: 64bit typos.
	* libosm/Makefile: Build PIC, dummy.
	* redhat/osm-2.4.9-e.spec.in: Add osm-lib package details

2003-06-23	Joel Becker <joel.becker@oracle.com>

	* configure.in: Added Red Hat AS2.1 specfile to AC_OUTPUT.
	* include/Makefile: Remove references to asm* directories.
	* include/asm-i386/*: Removed
	* include/linux/osmcompat32.h: Moved here.
	* include/linux/osmabi.h: 64bit pointers in struct osmio.
	* include/linux/osmkernel.h: osm_ioc64 and osm_ioc32.
	* include/osmlib.h: Test-based osm_ioc rearrangement.  Waiting
		on official layout.
	* kernel/Makefile: new osmcompat32.h location.
	* libosm/Makefile: new osmcompat32.h location.
	* libosm/osmlib.c: Casting for 64bit struct osmio.
	* kernel/osm.c: Full 64<->32 compatibility work.

2003-06-20	Joel Becker <joel.becker@oracle.com>

	* redhat/osm.init: Link OSM ABI on boot.
	* redhat/osm-2.4.9-e.spec.in: RHAS 2.1 specfile

2003-06-04	Joel Becker <joel.becker@oracle.com>

	* Makefile.orig: Same as Configure.

2003-06-04	Joel Becker <joel.becker@oracle.com>

	* Configure: Removed old useless Configure.

2003-06-04	Joel Becker <joel.becker@oracle.com>

	* Config.make.in: Added DEFS autoconf variable.
	* configure.in: Added call to AC_CHECK_SIZEOF.
	* include/asm-i386/osmcompat32.h: Added BITS_PER_LONG detection.
	* include/linux/osmabi.h: IODISK32 and IODISK64.
	* kernel/osm.c: IODISK32 and IODISK64.
	* libosm/Makefile: Add $(DEFS) to CPPFLAGS.
	* tools/Makefile: Add $(DEFS) to CPPFLAGS.